--- a/style/index.css
+++ b/style/index.css
@@ -123,7 +123,16 @@ p2{
     background-color:paleturquoise;
     color:darkolivegreen;
 }
-
+.list{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.tech{
+    padding-right: 1rem;
+}
 @media (max-width: 800px){
     .buttons, .footer-buttons{
         font-size: 1.5rem;
@@ -230,4 +239,5 @@ p2{
         justify-content: flex-end;
         align-items: center;
     }
+    
 }
