--- a/style/index.css
+++ b/style/index.css
@@ -31,10 +31,12 @@ h1{
     background-color:#ffffa0;
     color: #ff7300;
     border-radius: 50%;
-}
-
-p{
-    padding-bottom: 1.5rem;
+    width:75%;
+    text-align:center;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-content:center;
 }
 
 .buttons{
@@ -43,17 +45,19 @@ p{
     justify-content:center;
     align-items:center;
     margin:-2rem auto 5rem auto;
+    
 }
 
 .buttons a{
     height:1.5rem;
     width:auto;
     text-align:center;
-    padding:.2rem;
+    padding:.2rem .5rem .05rem .5rem;
     margin: .5rem;
     background-color: rebeccapurple;
     color: pink;
     text-decoration: none;
+    border-radius: 20%;
 }
 
 .buttons :hover{
@@ -61,22 +65,20 @@ p{
     color:darkolivegreen;
 }
 
-.small-container{
-    width:75%;
-    text-align:center;
-    display:flex;
-    flex-direction:column;
-    justify-content:end
-}
-
 .small-container p{
     width:100%;
+    font-size: larger;
+    margin: .75rem;
 }
 
 .content img{
    height:31.25rem;
-   margin:0.625rem 3.4375rem;
+   margin:2rem 3.5rem 1rem 3.5rem;
    width:90%;
+}
+
+p{
+   padding: 1rem; 
 }
 
 .projects{
@@ -112,11 +114,12 @@ p2{
     height:1.5rem;
     width:auto;
     text-align:center;
-    padding:.2rem;
+    padding:.2rem .5rem .05rem .5rem;
     margin: .5rem;
     background-color: rebeccapurple;
     color: pink;
     text-decoration: none;
+    border-radius: 20%;
 }
 
 .footer-buttons :hover{
