--- a/style/index.css
+++ b/style/index.css
@@ -136,6 +136,11 @@ p2{
 .tech{
     padding-right: 1rem;
 }
+
+.title{
+    font-size: 1.5rem;
+    
+}
 @media (max-width: 800px){
     .buttons, .footer-buttons{
         font-size: 1.5rem;
