--- a/style/index.css
+++ b/style/index.css
@@ -70,11 +70,22 @@ h1{
     font-size: larger;
     margin: .75rem;
 }
-
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
 .content img{
    height:31.25rem;
    margin:2rem 3.5rem 1rem 3.5rem;
    width:90%;
+}
+.content a{
+    background-color: aqua;
+    width: 27%;
+    padding: .5rem 1rem;
+    margin: auto auto auto 33%
 }
 
 p{
@@ -95,12 +106,12 @@ p{
 }
 
 p2{
-    width: 18%;
-    margin:.5rem;
+    width: 90%;
+    margin:.5rem .5rem .5rem 3rem;
     font-size: 100%;
     background-color: palegoldenrod;
-    border-radius: .8rem;
     color: rgb(24, 178, 250);
+    padding: .5rem;
 }
 
 .footer-buttons{
@@ -139,7 +150,7 @@ p2{
 
 .title{
     font-size: 1.5rem;
-    
+
 }
 @media (max-width: 800px){
     .buttons, .footer-buttons{
