--- a/style/index.css
+++ b/style/index.css
@@ -224,32 +224,29 @@ p2{
         width: 80%;
         margin:0;  font-size: 1rem;
     }
+    .content{
+        width: 100%;
+    }
 
     .content img{
         margin:5%;
-        height: 75%;
+        height: 100%;
     }
 
-    .projects{
-        display:flex;
-        flex-flow: row wrap;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
+    #img-one{
+        height: 200px;
     }
-    #project1, #project2, #project3, #project4{
-        width:46%;
-        margin:1.5%;
-        height:41%
+
+    .content a{
+        width:80%;
+        margin: auto;
     }
-    #project3{
-        height:18.26875rem;
-    }
-    p2{
-        width:98%;
+
+    .content p2{
+        width:85%;
         height: 8rem;
         margin:1rem;
-        font-size: 2rem;
+        font-size: 1rem;
         text-align: center;
     }
     .footer-buttons{
