--- a/style/index.css
+++ b/style/index.css
@@ -174,26 +174,20 @@ p2{
         font-size:2.5rem;
     }
 
-    .projects{
-        display:flex;
-        flex-flow: row wrap;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
+    .content{
+        width:90%;
     }
-    #project1, #project2, #project3, #project4{
-        width:46%;
-        margin:1.5%;
-        height:41%
+
+    .content a{
+        width:58%;
+        margin: auto auto auto 8rem;
+        text-align: center;
     }
-    #project3{
-        height:29.76875rem;
-    }
-    p2{
-        width:98%;
+    .content p2{
+        width:87%;
         height: 8rem;
-        margin:1rem;
-        font-size: 2rem;
+        margin:1rem .75rem 1rem 3.5rem;
+        font-size: 1.25rem;
         text-align: center;
     }
 }
